Fix responsiveness of .profile-buttons on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -432,7 +432,9 @@ iframe {
     width: 250px; 
   }
 
-  
-
+  .profile-button {
+    font-size: small;
+    padding: 5px 10px;
+  }
 }
 
